base.css - Fix alignment of "Files" and "Repositories"
Updates from Nic via Gitlab comment

--- a/web/base.css
+++ b/web/base.css
@@ -24,9 +24,27 @@ pre {
 .two-col {
   display: flex;
   flex-wrap: wrap;
+  gap: 2rem;
+  max-width: calc(80vw + 4rem);
+  margin: 0 auto;
 }
 .two-col fieldset {
-  width: 30vw;
+  margin: 0;
+  width: calc(50% - 5rem);
+}
+table.tbl-repos {
+  width: 100%;
+}
+tr td {
+  padding: 0.3rem 0;
+}
+tr td:not(tr:first-of-type td) {
+  border-top: 1px solid #ccc;
+}
+@media (max-width: 600px) {
+  .two-col fieldset {
+    width: 100%;
+  }
 }
 fieldset {
   background: #f0f0f0;
